--- a/bootstrap pages/index.html
+++ b/bootstrap pages/index.html
@@ -23,7 +23,7 @@
           class="mt-0">Analista e Desenvolvedor de Sistemas</small> | <small>Full-Stack <b>Jr</b></small> </p>
       </div>
       <div class="col-4 mt-3 d-flex justify-content-center">
-        <img src="../img/perfil.png" class="fluid-img" alt="..."
+        <img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
           style="border-radius: 50%; width: 100px; height: 100px;">
       </div>
       <div class="col-4 mt-4">
