correção do index

--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -22,7 +22,7 @@
                     <b>Jr</b></small> </p>
             </div>
             <div class="col-4 mt-3 d-flex justify-content-center">
-                <a href="./index.html"><img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
+                <a href="../index.html"><img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
                         style="border-radius: 50%; width: 100px; height: 100px;"></a>
             </div>
             <div class="col-4 mt-4">
