--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
 <body style="background: black;">
@@ -42,8 +42,8 @@
   </div>
 
   <div class="d-grid gap-2 col-6 mx-auto mt-5">
-    <a href="./curriculo.html" class="btn btn-success">CURRÍCULO</a>
-    <a href="./projetos.html" class="btn btn-success">PROJETOS</a>
+    <a href="./bootstrap pages/curriculo.html" class="btn btn-success">CURRÍCULO</a>
+    <a href="./bootstrap pages/projetos.html" class="btn btn-success">PROJETOS</a>
   </div>
   <br>
   <div class="container">
@@ -113,7 +113,7 @@
       </div>
     </div>
   </div>
-  <script src="../js/bootstrap.bundle.min.js"></script>
+  <script src="./js/bootstrap.bundle.min.js"></script>
 
   <div class="container d-flex justify-content-center mt-5">
     <h4>&copy;&nbsp;Todos os direitos reservados | 2022</h4>
