--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -44,6 +44,32 @@
         <div class="row ">
             <figure>
                 <div class="col text-center border">
+                    <h2>&lt;&nbsp;Aplicação Web Super Blog&nbsp;/&gt;</h2>
+                    <h3>Clique na imagem demonstrativa para acessar o aplicativo</h3>
+                    <br><br>
+                    <a href="https://israelita-blog.herokuapp.com/" target="_blank"><img src="../img/superblog.png"
+                            alt="" id="img1" class="img-fluid"></a>
+                    <br><br>
+                    <div class="descricao">
+                        <b>Tecnologias</b>: HTML, CSS, JAVASCRIPT, NODE JS, BOOTSTRAP, MONGODB<br> <br> <b>
+                            Objetivo</b>: Aprender técnicas de desenvolvimento na
+                        área do backend usando a ferramenta node js para definir conexão entre banco de dados e back-end
+                        com o front-end o qual foi construído através da framework handlebars para gerar os elementos
+                        html e o arquivo estático do bootstrap que tem um conjunto de classes css e funções javascript,
+                        deve-se enfatizar também o uso de vários módulos sendo um dos mais importantes o express, ambos
+                        os módulos foram baixados através do site npm que tem várias bibliotecas para desenvolvedores.
+                        <br> <br> <b>
+                            Descrição</b>: O superblog é um ambiente para fazer postagens a respeito de tecnologias,
+                        matemática e sobretudo desenvolvimento de sistemas para web, desktop ou criação de jogos.<br>
+                        <br>
+                    </div>
+                    <br>
+            </figure>
+        </div>
+        <br>
+        <div class="row ">
+            <figure>
+                <div class="col text-center border">
                     <h2>&lt;&nbsp;Página de Apresentação 1º Versão&nbsp;/&gt;</h2>
                     <h3>Clique na imagem demonstrativa para acessar o aplicativo</h3>
                     <br><br>
