--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       <div class="col-4 ">
         <p>
-        <h1 class="mb-0 d-flex justify-content-left">&lt;&nbsp;<strong>Israel Alves</strong>&nbsp;/&gt;</h1><br><small
-          class="mt-0">Analista e Desenvolvedor de Sistemas</small> | <small>Full-Stack <b>Jr</b></small> </p>
+        <h1 class="mb-0 d-flex justify-content-left"><strong>Israel Alves</strong></h1><br><small class="mt-0">Analista
+          e Desenvolvedor de Sistemas</small> | <small>Full-Stack <b>Jr</b></small> </p>
       </div>
       <div class="col-4 mt-3 d-flex justify-content-center">
         <img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
