--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -17,7 +17,7 @@
 
             <div class="col-4 ">
                 <p>
-                <h1 class="mb-0 d-flex justify-content-left">&lt;&nbsp;<strong>Israel Alves</strong>&nbsp;/&gt;</h1>
+                <h1 class="mb-0 d-flex justify-content-left"><strong>Israel Alves</strong>;</h1>
                 <br><small class="mt-0">Analista e Desenvolvedor de Sistemas</small> | <small>Full-Stack
                     <b>Jr</b></small> </p>
             </div>
