--- a/bootstrap pages/curriculo.html
+++ b/bootstrap pages/curriculo.html
@@ -18,8 +18,8 @@
 
       <div class="col-4 ">
         <p>
-        <h1 class="mb-0 d-flex justify-content-left">&lt;&nbsp;<strong>Israel Alves</strong>&nbsp;/&gt;</h1><br><small
-          class="mt-0">Analista e Desenvolvedor de Sistemas</small> | <small>Full-Stack <b>Jr</b></small> </p>
+        <h1 class="mb-0 d-flex justify-content-left"><strong>Israel Alves</strong></h1><br><small class="mt-0">Analista
+          e Desenvolvedor de Sistemas</small> | <small>Full-Stack <b>Jr</b></small> </p>
       </div>
       <div class="col-4 mt-3 d-flex justify-content-center">
         <a href="../index.html"><img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
@@ -43,7 +43,7 @@
     <table class="table table-dark table-striped text-center">
       <thead>
         <tr>
-          <th scope="col">Tecnologias que eu manjo</th>
+          <th scope="col">Formação técnica</th>
           <th scope="col">Tempo</th>
 
         </tr>
@@ -102,6 +102,11 @@
         <tr>
           <th scope="row">C#</th>
           <td colspan="2">Desde 2019</td>
+
+        </tr>
+        <tr>
+          <th scope="row">PHP</th>
+          <td colspan="2">Desde 2022</td>
 
         </tr>
       </tbody>
