--- a/index.html
+++ b/index.html
@@ -37,13 +37,17 @@
     <canvas id="canvas"></canvas>
   </div>
   <div class="d-flex justify-content-center">
-    <div style="position: relative; background-color: rgba(0, 0, 0, 0.8); width:400px; border-radius:10px ;">
+    <div style="position: relative; background-color: rgba(0, 0, 0, 0); width:400px; border-radius:10px ;">
       <div class="text-center">
+        <br>
         <p>
-        <h1 style="color:rgb(62, 202, 6) ;"><strong>Israel Alves</strong></h1><small
-          style="color:rgb(62, 202, 6) ;">Desenvolvedor e técnico de tecnologia
-          da
-          informação</small> </p>
+          <strong
+            style="color:white ; background-color: black; font-size: 30px; border-radius: 15%; padding: 5px;">Israel
+            Alves</strong><br><small style="color: white ; background-color: black;">Desenvolvedor e
+            técnico de tecnologia
+            da
+            informação</small>
+        </p>
       </div>
       <div class=" d-grid gap-2 col-6 mx-auto mt-5">
         <a href="./bootstrap pages/curriculo.html" class="btn btn-success">Currículo</a>
@@ -67,8 +71,8 @@
     </div>-->
       <br><br>
       <div class="text-center">
-        <p>
-        <h1 style="color:rgb(62, 202, 6) ;"><strong>Certificados</strong></h1>
+
+        <strong style="color:white ; background-color: black; font-size: 30px;">Certificados</strong>
       </div>
     </div>
   </div>
