--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -101,7 +101,7 @@
         <div class="row ">
             <figure>
                 <div class="col text-center border">
-                    <h2>&lt;&nbsp;Jogo simples do Mário&nbsp;/&gt;</h2>
+                    <h2>&lt;&nbsp;Calculadora&nbsp;/&gt;</h2>
                     <h3>Clique na imagem demonstrativa para acessar o aplicativo</h3>
                     <br><br>
                     <a href="https://steady-biscuit-62b75b.netlify.app/" target="_blank"><img
