--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 
-<body style="background: rgba(0, 0, 0, 0);">
+<body class="container-fluid bg-dark ">
 
 
   <div class="container-fluid bg-dark " style="color:rgb(62, 202, 6) ;">
