--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="container-fluid" style="position: absolute;">
-    <canvas id="canvas"></canvas>
+    <!--<canvas id="canvas"></canvas>-->
   </div>
   <div class="d-flex justify-content-center">
     <div style="position: relative; background-color: rgba(0, 0, 0, 0); width:400px; border-radius:10px ;">
@@ -42,8 +42,8 @@
         <br>
         <p>
           <strong
-            style="color:white ; background-color: black; font-size: 30px; border-radius: 15%; padding: 5px;">Israel
-            Alves</strong><br><small style="color: white ; background-color: black;">Desenvolvedor e
+            style="color:white ; /*background-color: black;*/ font-size: 30px; border-radius: 15%; padding: 5px;">Israel
+            Alves</strong><br><small style="color: white ; /*background-color: black;*/">Desenvolvedor e
             técnico de tecnologia
             da
             informação</small>
@@ -72,7 +72,7 @@
       <br><br>
       <div class="text-center">
 
-        <strong style="color:white ; background-color: black; font-size: 30px;">Certificados</strong>
+        <strong style="color:white ; /*background-color: black;*/ font-size: 30px;">Certificados</strong>
       </div>
     </div>
   </div>
