--- a/bootstrap pages/curriculo.html
+++ b/bootstrap pages/curriculo.html
@@ -152,7 +152,7 @@
           <div class="accordion-body">
             <ul>
               <li>Técnico de TI na empresa Atacadão S.A desde 2021 até o momento</li>
-              <li>Help Desk Ti desde 2020</li>
+              <li>Help Desk TI desde 2020</li>
               <li>Manutenção em Estrutura de Rede desde 2010</li>
               <li>Manutenção em Computadores e Impressoras desde 2010</li>
               <li>Desenvolvimento de Software desde 2019</li>
