--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </p>
       </div>
       <div class=" d-grid gap-2 col-6 mx-auto mt-5">
-        <a href="./curriculo/cv/index.html" class="btn btn-success">Currículo</a>
+        <a href="./curriculo/curriculo.html" class="btn btn-success">Currículo</a>
         <a href="./bootstrap pages/projetos.html" class="btn btn-success">Projetos</a>
         <a href="https://github.com/Khaldewey" class="btn btn-success" target="_blank">Github</a>
         <a href="https://www.linkedin.com/in/is-rael/" class="btn btn-success"
