--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -58,7 +58,7 @@
           </div>
           <div class="col bg-dark text-center rounded border" style="color :white;">
             <h4><b>Super Mario</b></h4>
-                    <h6><a href="https://steady-biscuit-62b75b.netlify.app/" target="_blank">Clique aqui para acessar o aplicativo</a></h6>
+                    <h6><a href="https://superlative-duckanoo-5b83ca.netlify.app/" target="_blank">Clique aqui para acessar o aplicativo</a></h6>
                     <div class="embed-responsive embed-responsive-21by9">
                         <iframe class="embed-responsive-item" src="/video/InShot_20221029_161307251.mp4"></iframe>
                       </div>
