--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
             </div> 
             <div class="carousel-item">
               <img src="../img/minicamp.png" class="d-block w-100" alt="...">
+            </div> 
+            <div class="carousel-item">
+              <img src="../img/angular.png" class="d-block w-100" alt="...">
             </div>
             
             
