--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -95,7 +95,18 @@
                     <div class="descricao">
                         <h6><b>Tecnologias</b>: HTML, CSS, JAVASCRIPT<br></h6>
                     </div>
-        </div>
+        </div> 
+
+        <div class="col bg-dark text-center rounded border" style="color :white;">
+          <h4><b>BuzzFeed</b></h4>
+                  <h6><a href="https://is-buzzfeed.netlify.app/" target="_blank">Clique aqui para acessar o aplicativo</a></h6>
+                  <div class="embed-responsive embed-responsive-21by9">
+                      <iframe class="embed-responsive-item" src="/video/buzzfeed.mp4"></iframe>
+                    </div>
+                  <div class="descricao">
+                      <h6><b>Tecnologias</b>: HTML, CSS, JAVASCRIPT, ANGULAR<br></h6>
+                  </div>
+      </div>
       </div>
 
     </div>
