--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -106,7 +106,17 @@
                   <div class="descricao">
                       <h6><b>Tecnologias</b>: HTML, CSS, JAVASCRIPT, ANGULAR<br></h6>
                   </div>
-      </div>
+      </div> 
+      <div class="col bg-dark text-center rounded border" style="color :white;">
+        <h4><b>API Rest para Blog</b></h4>
+                <h6><a href="https://github.com/Khaldewey/api-blog" target="_blank">Clique aqui para acessar o repositório</a></h6>
+                <div class="embed-responsive embed-responsive-21by9">
+                    <iframe class="embed-responsive-item" src="/video/apirest.mp4"></iframe>
+                  </div>
+                <div class="descricao">
+                    <h6><b>Tecnologias</b>: JAVA, SPRING FRAMEWORK, POSTGRESQL<br></h6>
+                </div>
+    </div>
       </div>
 
     </div>
