--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -78,7 +78,7 @@
           </div> 
           <div class="col bg-dark text-center rounded border" style="color :white;">
             <h4><b>Gerenciador de Armários</b></h4>
-                    <h6><a href="https://github.com/Khaldewey/gerenciador-de-armarios" target="_blank">Clique aqui para acessar o repositório</a></h6>
+                    <h6><a href="http://armarios.infinityfreeapp.com/index.php" target="_blank">Clique aqui para acessar o aplicativo</a></h6>
                     <div class="embed-responsive embed-responsive-21by9">
                         <iframe class="embed-responsive-item" src="/video/Design sem nome.mp4"></iframe>
                       </div>
