inclusão de certificado angular no curriculo

--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -135,7 +135,8 @@
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
-              <ul>
+              <ul> 
+                <li><a href="https://www.dio.me/certificate/904B0A8A/share" target="_blank">Potência Tech Angular Developer - Powered by iFood</a></li>
                 <li><a href="https://www.dio.me/certificate/4DDEF88F/share" target="_blank">Banco PAN Java Developer</a></li>
                 <li><a href="https://www.dio.me/certificate/6832DE2C/share" target="_blank">Linux do Zero</a></li>
                 <!--<li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>-->
