--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -117,6 +117,18 @@
                     <h6><b>Tecnologias</b>: JAVA, SPRING FRAMEWORK, POSTGRESQL<br></h6>
                 </div>
     </div>
+      </div> 
+
+      <div class="col bg-dark text-center rounded border" style="color :white;">
+        <h4><b>Camada front-end com consumo de API simples de blog</b></h4>
+                <h6><a href="https://apiblogconsumer.netlify.app/" target="_blank">Clique aqui para acessar o aplicativo</a></h6>
+                <div class="embed-responsive embed-responsive-21by9">
+                    <iframe class="embed-responsive-item" src="/video/angular with spring.mp4"></iframe>
+                  </div>
+                <div class="descricao">
+                    <h6><b>Tecnologias</b>: JAVA, SPRING FRAMEWORK, POSTGRESQL, ANGULAR, TYPESCRIPT<br></h6>
+                </div>
+    </div>
       </div>
 
     </div>
