--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -46,6 +46,10 @@
               <p class="w3-large">
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
               </p>
+              <p>Tuby on Rails</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:45%">45%</div>
+              </div>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
@@ -60,15 +64,23 @@
               </div>
               <p>Angular</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:54%">54%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div> 
               <p>Spring Framework</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:51%">51%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div> 
               <p>Laravel</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:20%">20%</div>
+              </div> 
+              <p>Mysql</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:55%">55%</div>
+              </div> 
+              <p>Postgresql</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:48%">48%</div>
               </div>
               <br>
   
@@ -109,7 +121,13 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
-            </h2>
+            </h2> 
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Programador Back-End na Agência Acerte</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUL/2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Responsável pela manutenção e implementação de algoritmos nas camadas de controller e models, manutenção em tabelas de banco de dados, utilização da framework ruby on rails e sgbd postgresql.</p>
+              <hr>
+            </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Auxiliar de Informática no Carrefour Atacadão S.A</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JAN/2021 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
