inserção do curso da google

--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -168,6 +168,18 @@
               <p>O curso de Análise e Desenvolvimento de Sistemas ensina a projetar, documentar, especificar, testar, implementar e cuidar da manutenção de sistemas computacionais e software. O Brasil ocupa o 9° lugar no ranking mundial de investimentos em tecnologia da informação.
 
                 Com duração mínima de 2 anos e meio (5 períodos), o curso de Análise e Desenvolvimento de Sistemas trabalha com foco na formação de profissionais que atendam às novas exigências do mercado de trabalho.</p>
+            </div> 
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Google</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUN/2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>
+                Este certificado de cinco cursos, desenvolvido pelo Google, inclui um currículo inovador projetado para preparar o estudante para uma função de nível básico em suporte de TI. Uma posição na área de TI pode ser um trabalho de serviço de apoio em pessoa ou remoto em uma pequena empresa ou em uma empresa global como o Google. O programa faz parte do Grow with Google, uma iniciativa do Google para ajudar a criar oportunidades econômicas.
+              </p>
+              <ul> 
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/V2NQ2ECSLPME" target="_blank">Fundamentos do Suporte Técnico</a></li>
+                <!--<li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>-->
+              </ul>
+              <hr>
             </div>
           </div>
 
