--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -157,6 +157,7 @@
                 <li><a href="https://www.dio.me/certificate/904B0A8A/share" target="_blank">Potência Tech Angular Developer - Powered by iFood</a></li>
                 <li><a href="https://www.dio.me/certificate/4DDEF88F/share" target="_blank">Banco PAN Java Developer</a></li>
                 <li><a href="https://www.dio.me/certificate/6832DE2C/share" target="_blank">Linux do Zero</a></li>
+                <li><a href="https://www.dio.me/certificate/CDFCD2A7/share" target="_blank">Santander Bootcamp 2023 - Fullstack Java+Angular</a></li>
                 <!--<li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>-->
               </ul>
               <hr>
@@ -177,6 +178,10 @@
               </p>
               <ul> 
                 <li><a href="https://www.coursera.org/account/accomplishments/verify/V2NQ2ECSLPME" target="_blank">Fundamentos do Suporte Técnico</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/MG6TCTAJS6B4" target="_blank">Estrutura e Funcionamento das Redes de Computadores</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/U4J288CEVR24" target="_blank">Sistemas Operacionais</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/MDPNQ588J2FC" target="_blank">Administração de Sistemas e Infraestrutura de TI</a></li>
+                <li><a href="https://www.coursera.org/account/accomplishments/verify/CWZUZ5T4QWBG" target="_blank">Segurança de TI</a></li>
                 <!--<li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>-->
               </ul>
               <hr>
