--- a/index.html
+++ b/index.html
@@ -115,7 +115,24 @@
             </div>
             <div class="carousel-item">
               <img src="../img/seg-ti.png" class="d-block w-100" alt="...">
-
+            </div>
+            <div class="carousel-item">
+              <img src="../img/g-fun.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/g-adm.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/g-est.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/g-seg-ti.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/g-so.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/harvard.png" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -158,6 +175,12 @@
             </div> 
             <div class="carousel-item">
               <img src="../img/angular.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/supti.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/fullstackk.png" class="d-block w-100" alt="...">
             </div>
             
             
