Atualização front-end 14/10/2023

--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -130,7 +130,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Auxiliar de Informática no Carrefour Atacadão S.A</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JAN/2021 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JAN/2021 - AGO/2023 </h6>
               <p>Responsável pelo monitoramento do servidor e dos processos de informática da loja, visando o bom andamento da operação, preparando o ambiente de trabalho e garantindo o funcionamento dos programas na abertura, durante o dia e fechamento da loja. Monitorar o servidor e garantir o pleno funcionamento dos equipamentos, instalando, configurando e acionando os programas na operação da loja. Realizar a manutenção preventiva e corretiva dos equipamentos da loja, fazendo a limpeza e acompanhando o funcionamento da operação. Liberar as maquinetas para o cadastro e iniciar os programas para início das atividades. Fazer os backups (Salvas) e iniciar o programa de fechamento e balanço diário da loja. Avaliar o estado do equipamento e a necessidade de substituição, reportando a gerência providenciando requisição do equipamento. Atender e acompanhar os chamados realizados pelos clientes conforme severidade e necessidade da operação. Alterar o perfil dos usuários conforme alteração de função e necessidade de novos acessos mediante solicitação do superior imediato.</p>
               <hr>
             </div>
@@ -172,7 +172,7 @@
             </div> 
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Google</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUN/2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>JUN/2023 - OUT/2023</h6>
               <p>
                 Este certificado de cinco cursos, desenvolvido pelo Google, inclui um currículo inovador projetado para preparar o estudante para uma função de nível básico em suporte de TI. Uma posição na área de TI pode ser um trabalho de serviço de apoio em pessoa ou remoto em uma pequena empresa ou em uma empresa global como o Google. O programa faz parte do Grow with Google, uma iniciativa do Google para ajudar a criar oportunidades econômicas.
               </p>
