--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body class="container-fluid">
 
 
-  <div class="container-fluid bg-dark " style="color:rgb(62, 202, 6) ;">
+  <div class="container-fluid " style="color:rgb(62, 202, 6) ;">
 
     <div class="row ">
 
