--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="col-4 mt-3 d-flex justify-content-center">
         <img src="../img/perfilatualizado.jfif" class="fluid-img" alt="..."
-          style="border-radius: 50%; width: 100px; height: 100px;">
+          style="border-radius: 50%; width: 300px; height: 300px; opacity: 0.7;">
       </div>
       <div class="col-4 mt-4">
         <!-- <img src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=openjdk&logoColor=white" alt="" style="max-width: 100px; max-height: 100px; margin: 5px;">
