--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -35,7 +35,7 @@
     </nav>
     
     <div class="jumbotron text-center">
-      <h1 class="display-4" style="font-family: 'Playfair Display', serif;">Estatísticas</h1>
+      <h1 class="display-4 display-md-3 display-sm-2" style="font-family: 'Playfair Display', serif;">Estatísticas</h1>
       <p class="lead">Informações baseadas em análise de dados do github. (Última atualização: 08/12/2023)</p>
   </div>
 
@@ -75,9 +75,9 @@
       });
   </script>
 
-    <div class="jumbotron text-center">
-      <h1 class="display-4" style="font-family: 'Playfair Display', serif;">Desenvolvimento Web</h1>
-      <p class="lead">Última atualização: 08/12/2023</p>
+  <div class="jumbotron text-center">
+    <h1 class="display-4 display-md-3 display-sm-2" style="font-family: 'Playfair Display', serif;">Desenvolvimento Web</h1>
+    <p class="lead">Última atualização: 08/12/2023</p>
   </div>
 
     <!-- Seção de Projetos usando o sistema de grid do Bootstrap -->
