algumas correções de responsividade

--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -76,7 +76,7 @@
   </script>
 
   <div class="jumbotron text-center">
-    <h1 class="display-4 display-md-3 display-sm-2" style="font-family: 'Playfair Display', serif;">Desenvolvimento Web</h1>
+    <h1 class="display-4 display-md-3 display-sm-2" style="font-family: 'Playfair Display', serif;">Projetos Web</h1>
     <p class="lead">Última atualização: 08/12/2023</p>
   </div>
 
