remoção de estatísticas

--- a/bootstrap pages/projetos.html
+++ b/bootstrap pages/projetos.html
@@ -97,10 +97,10 @@
       setInterval(generateMatrix, 150);
     </script>
     
-    <div class="jumbotron text-center">
-      <h4 class="display-4 display-md-3 display-sm-2">Estatísticas</h4>
+    <!-- <div class="jumbotron text-center"> -->
+      <!-- <h4 class="display-4 display-md-3 display-sm-2">Estatísticas</h4> -->
       <!-- <p class="lead">Informações baseadas em análise de dados do github. (Última atualização: 08/12/2023)</p> -->
-  </div>
+  <!-- </div> -->
 
     <div style="width: 80%; margin: 0 auto;">
       <canvas id="myChart"></canvas>
