--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -158,6 +158,7 @@
                 <li><a href="https://www.dio.me/certificate/4DDEF88F/share" target="_blank">Banco PAN Java Developer</a></li>
                 <li><a href="https://www.dio.me/certificate/6832DE2C/share" target="_blank">Linux do Zero</a></li>
                 <li><a href="https://www.dio.me/certificate/CDFCD2A7/share" target="_blank">Santander Bootcamp 2023 - Fullstack Java+Angular</a></li>
+                <li><a href="https://www.dio.me/certificate/5QD81AKO/share" target="_blank">Formação Java Developer</a></li>
                 <!--<li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>-->
               </ul>
               <hr>
