--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
             <div class="carousel-item">
               <img src="../img/fullstackk.png" class="d-block w-100" alt="...">
             </div>
+            <div class="carousel-item">
+              <img src="../img/formjava.png" class="d-block w-100" alt="...">
+            </div>
             
             
           </div>
